--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -18,10 +18,10 @@
     }
   </style>
 
-  <header>
+  {# <header>
     <h1>Sediriger - Assistance pour les malvoyants</h1>
     <!-- Barre de navigation ou d'autres éléments du header si nécessaire -->
-  </header>
+  </header> #}
 
   <main>
     <section id="introduction">
