--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-  Hello
+  SeDiriger
 {% endblock %}
 
 {% block body %}
@@ -18,10 +18,11 @@
     }
   </style>
 
-  {# <header>
+  <header>
     <h1>Sediriger - Assistance pour les malvoyants</h1>
     <!-- Barre de navigation ou d'autres éléments du header si nécessaire -->
-  </header> #}
+    
+  </header>
 
   <main>
     <section id="introduction">
@@ -52,7 +53,4 @@
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2023 Sediriger - Assistance pour les malvoyants. Tous droits réservés.</p>
-  </footer>
 {% endblock %}
