--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,7 @@ main {
     padding: 20px;
     background-color: #69F0C3;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 100px;
 }
 
 section {
@@ -47,7 +48,7 @@ ul {
 }
 
 footer {
-    background-color: #55D95E;
+    background-color: #3E65FF;
     color: #fff;
     text-align: center;
     padding: 10px;
