--- a/public/css/capture.css
+++ b/public/css/capture.css
@@ -30,3 +30,9 @@ video {
 canvas {
     display: none; /* masquer le canvas par défaut */
 }
+.capture {
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: center;
+}
