--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,3 +97,15 @@ a:hover {
     text-decoration: none;
     font-weight: bold;
 }
+
+/* bouton route /capture */
+
+.btn-capture {
+    display: inline-block;
+    padding: 10px 15px;
+    background-color: #3498db;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 20px; /* ajustez selon vos besoins */
+}
