--- a/templates/camera/index.html.twig
+++ b/templates/camera/index.html.twig
@@ -36,4 +36,6 @@
     </table>
 
     <a href="{{ path('app_camera_new') }}">Create new</a>
+    <a href="{{ path('app_capture') }}" class="btn-capture">Capture Media</a>
+
 {% endblock %}
