--- a/templates/capture/capture.html.twig
+++ b/templates/capture/capture.html.twig
@@ -8,6 +8,7 @@
     <canvas id="canvas" width="640" height="480"></canvas>
     <button id="capture">Capture Image</button>
   </div>
+  <a href="{{ path('app_camera_new') }}">Create new</a>
 {% endblock %}
 
 {% block javascripts %}
