--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,7 +103,7 @@ a:hover {
 .btn-capture {
     display: inline-block;
     padding: 10px 15px;
-    background-color: #3498db;
+    background-color: #3E65FF;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
