--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,48 +10,68 @@
 
     {% block stylesheets %}
       {{ encore_entry_link_tags('app') }}
-    <!-- Ajoutez ceci dans la section head de votre layout.html.twig -->
-    {# <link rel="stylesheet" href="{{ asset('path/to/your/css/style.css') }}" /> #}
-    <link rel="stylesheet" href="{{ asset("css/style.css") }}">
-    <!-- style de capture -->
-    {# <link rel="stylesheet" href="{{ asset('css/capture.css') }}"> #}
+      <!-- Ajoutez ceci dans la section head de votre layout.html.twig -->
+      {# <link rel="stylesheet" href="{{ asset('path/to/your/css/style.css') }}" /> #}
+      <link rel="stylesheet" href="{{ asset('css/style.css') }}" />
+      <!-- style de capture -->
+      <link rel="stylesheet" href="{{ asset('css/capture.css') }}">
+      <!-- style Bootstrape -->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
     {% endblock %}
 
     {% block javascripts %}
-      {{ encore_entry_script_tags('app') }}
+      {# {{ encore_entry_script_tags('app') }} #}
     {% endblock %}
+    <script src="https://unpkg.com/feather-icons"></script>
+    <script src="{{ asset('js/script.js') }}"></script>
   </head>
   <body>
-    
     <header>
-        <nav class="navbar">
+      <nav class="navbar">
+        <ul>
+          <li>
+            <a href="{{ path('app_front') }}">Accueil</a>
+          </li>
+          <li>
+            <a href="{{ path('app_camera_index') }}">Caméra</a>
+          </li>
+          <li>
+            <a>Parcours</a>
             <ul>
-                <li><a href="{{ path("app_front" ) }}">Accueil</a></li>
-                <li><a href="{{ path("app_camera_index" ) }}">Caméra</a></li>
-                <li><a >Parcours</a>
-                    <ul>
-                        <li><a >Définir mon parcours</a></li>
-                        <li><a >Historique de mes parcours</a></li>
-                    </ul>
-                </li>
-                <li><a >Musique</a></li>
-                <li><a >Blog</a></li>
-                <li><a >Avis Utilisateurs</a></li>
-                <li><a >Contact</a></li>
+              <li>
+                <a>Définir mon parcours</a>
+              </li>
+              <li>
+                <a>Historique de mes parcours</a>
+              </li>
             </ul>
-        </nav>
+          </li>
+          <li>
+            <a>Musique</a>
+          </li>
+          <li>
+            <a>Blog</a>
+          </li>
+          <li>
+            <a>Avis Utilisateurs</a>
+          </li>
+          <li>
+            <a>Contact</a>
+          </li>
+        </ul>
+      </nav>
     </header>
-    
+
     <main>
-    {% block body %}
-    {% endblock %}
+      {% block body %}
+
+      {% endblock %}
     </main>
 
     <!-- Le reste de votre contenu -->
 
     <footer>
-        <p>&copy; 2023 Sediriger - Assistance pour les malvoyants. Tous droits réservés. Fondé par Diego Robert de Massy.</p>
+      <p>&copy; 2023 Sediriger - Assistance pour les malvoyants. Tous droits réservés. Fondé par Diego Robert de Massy.</p>
     </footer>
-    
   </body>
 </html>
