mise en place de la détection des objets exemple de détection des visages

--- a/templates/capture/capture.html.twig
+++ b/templates/capture/capture.html.twig
@@ -25,6 +25,7 @@
   {{ parent() }}
   <script src="https://unpkg.com/feather-icons"></script>
   <script src="{{ asset('js/script.js') }}"></script>
+  {# <script src="{{ asset('python/script.py') }}"></script> #}
 {% endblock %}
 
 {% block stylesheets %}
