--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@ ul {
 body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
-    background-color: #BFFA52 !important;
+    background-color: #5cda49 !important;
     color: #333;
 }
 
